--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <p class="hero-paragraph">Actively seeking new opportunities to collaborate with amazing teams.</p>
                             <!--<div class="lights-toggle">
                                 <input id="lights-toggle" type="checkbox" name="lights-toggle" class="switch" checked="checked">
-                                <label for="lights-toggle" class="text-xs"><!--<span><span class="label-text">dark</span></span>--></label>
+                                <label for="lights-toggle" class="text-xs"><span><span class="label-text">dark</span></span>--></label>
                             </div>-->
 	                        <div class="hero-cta">
 								<!-- <a class="button button-primary" href="#">Buy it now</a> 
