--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <!--<div class="lights-toggle">
                                 <input id="lights-toggle" type="checkbox" name="lights-toggle" class="switch" checked="checked">
                                 <label for="lights-toggle" class="text-xs"><span><span class="label-text">dark</span></span>--></label>
-                            </div>-->
+                            </div>
 	                        <div class="hero-cta">
 								<!-- <a class="button button-primary" href="#">Buy it now</a> 
 								<div class="lights-toggle">
