footer logo updated

--- a/savingsoak/working/demo0/index.html
+++ b/savingsoak/working/demo0/index.html
@@ -824,7 +824,7 @@
                                     <div class="col-md-7 col-sm-6 col-xs-12 ">
 
                                         <div class="logo-footer ">
-                                            <img src="assets/images/logo-white.png " alt="">
+                                            <img src="assets/images/logo-footer.svg " alt="">
 
                                         </div>
                                         <div class="text-footer ">
@@ -971,7 +971,7 @@
                             <!-- COPYRIGHT TEXT -->
 
                             <div class="copyright ">
-                                <p>2018 © Copyright Design_GrapahMA All rights Reserved.</p>
+                                <p>2018 © Copyright SavingsOak All rights Reserved.</p>
                             </div>
                             <!-- COPYRIGHT TEXT -->
 
