--- a/savingsoak/working/demo0/blog.html
+++ b/savingsoak/working/demo0/blog.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Stribe Landing page Template">
-    <title>Stribe Landing page Template</title>
+    <title>SavingsOak | Description goes here</title>
 
     <!--External Stylesheets css-->
 
@@ -86,14 +86,14 @@
                     <!-- Logo -->
 
                     <a class="navbar-brand logo" href="">
-            <img src="assets/images/logo-white.png"  alt="" title="">
+            <img src="assets/images/logo-white.svg"  alt="" title="">
           </a>
                 </div>
 
                 <!--Links Menu-->
                 <div class="navbar-collapse collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active active-link">
+                        <li>
                             <a data-scroll="" href="index.html" class="section-scroll">Home</a>
                         </li>
 
@@ -112,18 +112,11 @@
                             <a data-scroll="" href="#pricing" class="section-scroll">Pricing </a>
                         </li>
 
-                        <li class="dropdown">
-                            <a href="#">Blog </a>
-                            <ul>
-                                <li><a href="blog.html">Blog grid</a></li>
-                                <li><a href="blog-full-width.html">Blog full width</a></li>
-                                <li><a href="blog-left-sidebar.html">Blog with left sidebar</a></li>
-                                <li><a href="blog-right-sidebar.html">Blog with right sidebar</a></li>
-                                <li><a href="single-post.html">single blog</a></li>
-                            </ul>
-
-
+                        <li class="active active-link">
+                            <a data-scroll="" href="#blog" class="section-scroll">Blog </a>
                         </li>
+
+                      
                          <!--
                         <li class="btn-login">
                             <a href="#" class="section-scroll" data-toggle="modal" data-target="#login-modal">Login</a>
