--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                     <!-- Logo -->
 
-                    <a id="logo" style="color: #3BE8B0;" class="navbar-brand logo" href="">SRIRAM PK</a>
+                    <a id="logo" style="color: hsl(252deg 95% 66%);" class="navbar-brand logo" href="">SRIRAM PK</a>
                 </div>
 
                 <!--Links Menu-->
@@ -126,7 +126,7 @@
 
                     <div class="container">
                         <div class="hero-text">
-                            <h3 style="text-align: center;"><a style="color: #3BE8B0; text-align: center;">Product Designer</a> in San Francisco, CA</h3>
+                            <h3 style="text-align: center;"><a style="color: hsl(252deg 95% 66%); text-align: center;">Product Designer</a> in San Francisco, CA</h3>
 
                             <p style="text-align: center;">I partner with product managers and engineers to create and improve digital product experience.</p>
                             
