--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                     <!-- Logo -->
 
-                    <a id="logo" style="color: hsl(252deg 95% 66%);" class="navbar-brand logo" href="">SRIRAM PK</a>
+                    <a id="logo" style="color: hsl(252deg 95% 66%); font-weight: 700;" class="navbar-brand logo" href="">SRIRAM</a>
                 </div>
 
                 <!--Links Menu-->
@@ -125,10 +125,10 @@
                 
 
                     <div class="container">
-                        <div class="hero-text">
-                            <h3 style="text-align: center;"><a style="color: hsl(252deg 95% 66%); text-align: center;">Product Designer</a> in San Francisco, CA</h3>
+                        <div class="hero-text vertical-center">
+                            <h3 id="hero-copy"><a style="color: hsl(252deg 95% 66%);">Product Designer</a> in San Francisco, CA</h3>
 
-                            <p style="text-align: center;">I partner with product managers and engineers to create and improve digital product experience.</p>
+                            <p>I partner with product managers and engineers to create and improve digital product experience.</p>
                             
                              <a href="" class="btn-link" style="margin-right: 4rem;"> 
                                  <span>View projects →</span></a>
