--- a/assets/index.html
+++ b/assets/index.html
@@ -56,7 +56,7 @@
           <!--<li><a class="nav-link" href="#about">About</a></li>-->
           <li><a class="nav-link" href="#services">Work</a></li>
           <li><a class="nav-link" href="#bookshelf">Bookshelf</a></li> 
-          <li><a class="nav-link" href="https://drive.google.com/file/d/1omxYqbv2mip09LIaCEgAnHX_lE78b26P/view?usp=sharing" target="_blank">Resume</a></li>
+          <li><a class="nav-link" href="resume.pdf" target="_blank">Resume</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
