--- a/about.html
+++ b/about.html
@@ -87,14 +87,14 @@
 				<div id="header-content" class="col-md-12">
 					<div class="display-t">
 						<div class="display-tc fadeInUp animated-fast" data-animate-effect="fadeIn">
-							<p style="width: 72%;">A technology enthusiast by heart, My love and passion for design made me give up a career in software engineering and become a full-time designer. For the last 6 years, I have spent the vast majority of my time learning, crafting, and tuning my skills in design, but, a background in software engineering has really helped me understand the nuances of software product development.<br/></p>
+							<p>A technology enthusiast by heart, My love and passion for design made me give up a career in software engineering and become a full-time designer. For the last 6 years, I have spent the vast majority of my time learning, crafting, and tuning my skills in design, but, a background in software engineering has really helped me understand the nuances of software product development.<br/></p>
 							
-							<p class="fadeInUp animated-fast" style="width: 72%;">I enjoy investing my time on side projects. I'm always looking for new opportunities and constantly chewing new ideas to take from 0 -> 1.<br/><br/>
+							<p class="fadeInUp animated-fast">I enjoy investing my time on side projects. I'm always looking for new opportunities and constantly chewing new ideas to take from 0 -> 1.<br/><br/>
 
 							In my previous life, I was a shortfilm maker crowdsouring stories and experimenting different visual effects using Adobe After Effects.
 							</p>
 
-							<p class="fadeInUp animated-fast" style="width: 72%;">Apart from design and engineering, Below is the list of other jobs I've had:<br/>
+							<p class="fadeInUp animated-fast">Apart from design and engineering, Below is the list of other jobs I've had:<br/>
 							• A/V technician<br/>
 							• Customer support agent <br/>
 							• Motel receptionist<br/>
