--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<div class="display-t">
 						<div class="display-tc fadeInUp animated-fast" data-animate-effect="fadeIn">
 							<h1>Hello 👋🏻</h1>
-							<p> I'm Sriram, a product designer based in bay area, california. I currently create experiences at <a href="http://tubi.tv/" target="_blank"><b>Tubi</b>,</a> the largest AVOD streaming service.&nbsp; Previously, I worked at Apple creating internal fleet management tools. <br/><br/>When not working, I enjoy playing video games, listening to music and binge watching TV.</p>
+							<p> I'm Sriram, a product designer based in bay area, california. I'm currently createing experiences at <a href="http://tubi.tv/" target="_blank"><b>Tubi</b>,</a> the largest AVOD streaming service.&nbsp; Previously, I worked at Apple creating internal fleet management tools. <br/><br/>When not working, I enjoy playing video games, listening to music and binge watching TV.</p>
 						</div>
 					</div>
 				</div>
