--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 	<!-- <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">	 -->
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 	
-	<link rel="icon" type="image/png" href="images/favicon.png"/>
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -74,7 +73,7 @@
 			<div class="row">
 				<div id="header-content" class="col-md-12">
 					<div class="display-t">
-						<div class="display-tc fadeInUp animated-fast" data-animate-effect="fadeIn">
+						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Hello 👋🏻</h1>
 							<p> I'm Sriram, a product designer based in bay area, california. I'm currently createing experiences at <a href="http://tubi.tv/" target="_blank"><b>Tubi</b>,</a> the largest AVOD streaming service.&nbsp; Previously, I worked at Apple creating internal fleet management tools. <br/><br/>When not working, I enjoy playing video games, listening to music and binge watching TV.</p>
 						</div>
