--- a/index.html
+++ b/index.html
@@ -130,6 +130,20 @@
 				</div>
 				<div class="col-md-12">
 					<div class="fh5co-portfolio animate-box">
+						<a target="_blank" href="https://docs.google.com/presentation/d/1xkJz-0H0TjoexgGE0ZtF5Sa0_QeJvd80KJ_UE9pk5eA/edit#slide=id.p">
+							<div class="portfolio-entry" style="background-image: url(images/portfolio-7.jpg);"></div>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-12">
+					<div class="fh5co-portfolio animate-box">
+						<a target="_blank" href="#">
+							<div class="portfolio-entry" style="background-image: url(images/portfolio-8.jpg);"></div>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-12">
+					<div class="fh5co-portfolio animate-box">
 						<a href="#">
 							<div class="portfolio-entry" style="background-image: url(images/portfolio-3.jpg);"></div>
 						</a>
@@ -179,7 +193,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">© 2021, Sriram P Krupalar<a href="http://freehtml5.co/"></a></small> 
+						<small class="block">© 2021, Sriram P Krupakar<a href="http://freehtml5.co/"></a></small> 
 					</p>
 				</div>
 			</div>
