--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
 				<div class="col-md-12">
 					<div class="fh5co-portfolio animate-box">
 						<a target="_blank" href="https://docs.google.com/presentation/d/1xkJz-0H0TjoexgGE0ZtF5Sa0_QeJvd80KJ_UE9pk5eA/edit#slide=id.p">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-7.jpg);"></div>
+							<div class="portfolio-entry" style="background-image: url(images/Portfolio-7.jpg);"></div>
 						</a>
 					</div>
 				</div>
 				<div class="col-md-12">
 					<div class="fh5co-portfolio animate-box">
 						<a target="_blank" href="#">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-8.jpg);"></div>
+							<div class="portfolio-entry" style="background-image: url(images/Portfolio-8.jpg);"></div>
 						</a>
 					</div>
 				</div>
