--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <html lang="en">
     <head>
         <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-S8CQNHC5TD"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-104550804-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-S8CQNHC5TD');
+  gtag('config', 'UA-104550804-1');
 </script>
+
         <title>Sriram PK &mdash; Design Portfolio</title>
         <meta name="description" content="Sriram PK &mdash; Design Portfolio">    
         <meta charset="utf-8">
